# openconnect-lite

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: totp_demo.py
openconnect_lite/: app.py  config.py
openconnect_sso/: app.py  windows_helper.py
tests/: test_app.py
